--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -2,7 +2,7 @@
 
 ## 基本形式
 
-给定由 *d* 个属性描述的示例 x = (x~1~; x~2~; … ;x~d~), 其中 x~i~ 是 x 在第 i 个属性上的取值，线性模型(linear model) 试图学得一个通过属性的**线性组合**来进行预测的函数：
+给定由 *d* 个属性描述的示例 x = (x~1~; x~2~; … ; x~d~), 其中 x~i~ 是 x 在第 i 个属性上的取值，线性模型(linear model) 试图学得一个通过属性的**线性组合**来进行预测的函数：
 $$
 f(\mathbf{x}) = \omega_1 x_1 + \omega_2 x_2 + ... + \omega_d x_d + b
 $$
@@ -22,13 +22,13 @@ $$
 
 ### 闭式解的方式
 
-**定义**：给定数据集 $D=\{ (\mathbf{x_1}, y_1), (\mathbf{x_2}, y_2), …, (\mathbf{x_3}, y_3)\}$，"线性回归" (linear regression)试图学得一个线性模型，通过对输入的特征进行加权求和和一个bias term 来尽可能准确地预测实值输出标记.
+**定义**：给定数据集 $D=\{ (\mathbf{x_1}, y_1), (\mathbf{x_2}, y_2), …, (\mathbf{x_3}, y_3)\}$，"线性回归" (linear regression) 试图学得一个线性模型，通过对输入的特征进行**加权求和**和一个bias term 来尽可能准确地预测实值输出标记.
 
-**NOTE**：对于离散属性，若属性值间存在"序" (order)关系，可通过连续化将其转化为连续值；若属性值间不存在序关系，假定有 k 个属性值，则通常转化为 k 维二值向量。
+**NOTE**：对于离散属性，若属性值间存在*序* (order)关系，可通过连续化将其转化为连续值；若属性值间不存在序关系，假定有 k 个属性值，则通常转化为 k 维二值向量。
 
 **目标**：$f(x_i)=\omega_ix_i+b$ 使得 $f(x_i) \approx y_i$
 
-而确定 $\omega$ 和 $b$ 的**关键**在于衡量 f(x) 和 y 之间的差别。*均方误差*是回归任务中最常用的性能度量。均方误差具有很好的几何意义，对应于*欧式距离*。基于均方误差来进行模型求解的方法称为*最小二乘法*。
+确定 $\omega$ 和 $b$ 的**关键**在于衡量 f(x) 和 y 之间的差别。**均方误差**是回归任务中最常用的性能度量。均方误差对应于*欧式距离*，具有很好的几何意义。基于均方误差来进行模型求解的方法称为*最小二乘法*。
 
 设$E_{w,b}=\sum_{i=1}^{m}(y_i-\omega x_i -b)$. 将之分别对 $\omega$ 和 $b$ 求导并令等式为零即可得到结果。
 
@@ -56,7 +56,7 @@ f(\hat x_i)=\hat x_i^T(\mathbf{X}^T \mathbf{X})^{-1}\mathbf{X}^T \mathbf{y}
 $$
 对于非满秩的情况，最常见的接发则是引入正则化（regularization）项。
 
-上式的计算复杂度为 O(n^2.4^) 到 O(n^3^). 它的好处是对训练集内的数据量大小（m）是线性呢。只要内存能够放下，闭式解可以**高效地处理大数据集**。但对于特征多的数据（n维向量）,n*n 大小矩阵的求逆则太过费时。
+上式的计算复杂度为 O(n^2.4^) 到 O(n^3^). 它的**优点**是对训练集内的样本量大小（m）是线性的。只要内存能够放下，闭式解可以**高效地处理大数据集**。但对于特征多的数据（n维向量）,n*n 大小矩阵的求逆则太过费时。
 
 ### 梯度下降法
 
@@ -98,13 +98,13 @@ $$
 $$
 MSE(\mathbf{X}, h_\theta)=\frac{1}{m}\sum\limits_{i=1}^m(\theta ^T\cdot x^{(i)}-y^{(i)})^2
 $$
-对$\theta_j$ 求导数可得
+对$\theta_j$ 求导可得
 $$
 \frac{\partial}{\partial \theta_j}MSE(\theta)=\frac{2}{m}\sum\limits_{i=2}^m(\theta^T\cdot x^{(i)}-y^{(i)})x_j^{(i)}
 $$
 若我们一次性对**所有的参数**进行求导，则可得到*梯度向量*(gradient vector) $\nabla_\theta MSE(\theta)$:
 $$
-\nabla_\theta=\begin{pmatrix}
+\nabla_\theta MSE(\theta)=\begin{pmatrix}
 \frac{\partial}{\partial \theta_0}MSE(\theta) \\
 \frac{\partial}{\partial \theta_1}MSE(\theta) \\
 \vdots \\
@@ -112,7 +112,7 @@ $$
 \end{pmatrix}
 =\frac{2}{m}\mathbf{X}^T\cdot (\mathbf{X}\cdot\theta-\mathbf{y})
 $$
-这个式子使用了**整个数据集**。所以，当数据集很大 (n很大) 时，批量梯度下降会很慢。
+这个式子使用了**整个数据集**。所以，当数据集很大 (m 很大) 时，批量梯度下降会很慢。
 
 迭代时向**梯度方向的反方向**优化（$\eta$ 为学习率）：
 $$
@@ -131,7 +131,7 @@ $$
 
 ![屏幕快照 2018-01-16 20.34.30](../../../Downloads/屏幕快照 2018-01-16 20.34.30.png)
 
-**优点**：当代价函数不规则时，随机梯度下降会帮它跳出局部最小值。
+**优点**：当代价函数不规则时，随机梯度下降会帮它**跳出局部最小值**。
 
 **解决**：逐步减小学习率。这就是**模拟退火**算法：一开始时使用较大的迭代步长（来加快进度和跳出局部最小值），然后不断减小学习率以减小迭代步长，保证算法可以 settle at the global minimum.（用来计算学习率的函数称为*learning schedule*.）
 
@@ -150,7 +150,7 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 **优点**：
 
 - 能够**拟合复杂的模型**；
-- 找到**特征之间的联系**。因为 polynomialFeatures also adds all combinations of features up to the given degree. 利用算得的参数就可以审视数据中特征间的联系。
+- 找到**特征之间的联系**。因为 *polynomialFeatures* also adds all combinations of features up to the given degree. 利用算得的参数就可以审视数据中特征间的联系。
 
 **缺点**：特征空间**维度爆炸**：*PolynomialFeatures(degree = n)* transforms an array containing *n* features into an array containing $\frac{(n+d)!}{d!n!}$ features.
 
@@ -208,7 +208,7 @@ $$
 
 令$\omega=[\theta_1, \theta_2,\ \ldots,\theta_n]$，正则化项就是$\omega$ 的**l~2~ 范数** (l~2~ norm)。
 
-若要执行**批量梯度下降**，对式(9) 加入$\alpha\omega$ 即可。对于**随机梯度下降**，剃度为：
+若要执行**批量梯度下降**，对式(9) 加入$\alpha\omega$ 即可。对于**随机梯度下降**，梯度为：
 $$
 gradient=2\mathbf{x}_i^T(\mathbf{x}_i^T\theta - y_i)+\alpha\theta_i
 $$
@@ -256,7 +256,7 @@ $$
 
 线性模型虽简单，却有丰富的变化。假设示例所对应的**输出标记**是在**指数尺度**上变化，那就可将输出标记的对数作为线性模型逼近的目标， 即
 $$
-ln\ y=\mathbf{\omega}^T \mathbf{x}+b
+\ln\ y=\mathbf{\omega}^T \mathbf{x}+b
 $$
 这就是*对数线性回归*（log-linear regression）。
 
@@ -273,7 +273,7 @@ y =
 1, & z > 0
 \end{cases}
 $$
-阶跃函数不连续，不能作为$g^-(\cdot)$。
+阶跃函数不连续，不能作为$g^{-1}(\cdot)$。
 
 需要找到一个单调可微的*替代函数*，**对数几率函数**（logistic function）正是这样一个函数。从下图可以看出，对数几率函数是一个Sigmoid函数（即S 型函数）。
 $$
@@ -322,7 +322,7 @@ p(y_i|\ \mathbf{x};\ \mathbf{\omega},b)=y_ip_1(\hat{\mathbf{x}}_i;\mathbf{\beta}
 $$
 将式(25) 代入式(24)，并根据式(22) 和(23) 可知，最大化式(24) 等价于最小化
 $$
-l(\mathbf{\beta})=\sum\limits_{i=1}^m(-y_i\mathbf{\beta}^T\hat{\mathbf{x}}_i+\ln(1+e^{\mathbf{\beta}^T \hat{\mathbf{x}}_i})
+l(\mathbf{\beta})=\sum\limits_{i=1}^m(-y_i\mathbf{\beta}^T\hat{\mathbf{x}}_i+\ln(1+e^{\mathbf{\beta}^T \hat{\mathbf{x}}_i}))
 $$
 式(26) 是关于$\mathbf{\beta}$ 的高阶**可导连续凸函数**，可以根据*凸优化理论*求解。
 
@@ -346,7 +346,7 @@ $$
 $$
 J(\theta)=-\frac{1}{m}\sum\limits_{i=1}^{m}[y^{(i)}\log(\hat p^{(i)})+(1-y^{(i)})\log(1-\hat p^{(i)})]
 $$
-该方程**没有闭式解**。但该方程时**凸函数**，所以梯度下降法一定会找到全局最小值。$J(\theta)$ 对于$\theta_j$ 的偏导数为：
+该方程**没有闭式解**。但该方程是**凸函数**，所以梯度下降法一定会找到全局最小值。$J(\theta)$ 对于$\theta_j$ 的偏导数为：
 $$
 \frac{\partial}{\partial\theta_j}j(\theta)=\frac{1}{m}\sum\limits_{i=1}^{m}(\sigma(\theta^T\cdot\mathbf{x}^{(i)})-y^{(i)})x_j^{(i)}
 $$
@@ -397,7 +397,7 @@ $$
 **解释**：
 
 - 正确时，$y_k^{(i)}=1$，$\hat p_k^{(i)}$ 也接近于1；此时$\log(\hat p_k^{(i)})$ 从负数轴逼近0，因此cost 很小；
-- 错误时，$y_k^{(i)}=1$，而对应的$\hat p_k^{(i)}$ 也接近于0；此时$-\log(\hat p_k^{(i)})$ 很大，因此cost 很小；
+- 错误时，$y_k^{(i)}=1$，而对应的$\hat p_k^{(i)}$ 接近于0；此时$-\log(\hat p_k^{(i)})$ 很大，因此cost 很大；
 
 对代价函数求偏导为：
 $$
@@ -412,11 +412,11 @@ $$
 
 具体**描述**：
 
-给丁数据集$D=\{(\mathbf x_i,y_i\}^m_{i=1},\ y_i\in\{0,\ 1\}$ ，令$\mathbf X_i,\ \mu_i,\ \Sigma_i$ 为第i 类示例的集合、均值向量和协方差矩阵。将数据投影到直线$\omega$ 上，则两类样本的**中心**在直线上的投影为$\omega^T\mu_0$ 和$\omega^T\mu_1$，协方差为$\omega^T\Sigma_0\omega$ 和$\omega^T\Sigma_1\omega$。(直线是一维空间，以上四个皆为实数。)
+给丁数据集$D=\{(\mathbf x_i,y_i\}^m_{i=1},\ y_i\in\{0,\ 1\}$ ，令$\mathbf X_i,\ \mu_i,\ \mathbf \Sigma_i$ 为第i 类示例的集合、均值向量和协方差矩阵。将数据投影到直线$\omega$ 上，则两类样本的**中心**在直线上的投影为$\omega^T\mu_0$ 和$\omega^T\mu_1$，协方差为$\omega^T\mathbf \Sigma_0\omega$ 和$\omega^T\mathbf \Sigma_1\omega$。(直线是一维空间，以上四个皆为实数。)
 
-上面思想的**代数表示**为：$\omega^T\Sigma_0\omega+ \omega^T\Sigma_1\omega$ 尽可能小 (同类接近) 和$||\omega^T\mu_0 - \omega^T\mu_1||$ 尽可能大 (异类相远)。即最大化目标：
+上面思想的**代数表示**为：$\omega^T\mathbf\Sigma_0\omega+ \omega^T\mathbf \Sigma_1\omega$  尽可能小 (同类接近) 和$||\omega^T\mu_0 - \omega^T\mu_1||$ 尽可能大 (异类相远)。即最大化目标：
 $$
-J=\frac{||\omega^T\mu_0 - \omega^T\mu_1||_2^2}{\omega^T\Sigma_0\omega+ \omega^T\Sigma_1\omega}=\frac{\omega^T(\mu_0-\mu_1)(\mu_0-\mu_1)^T\omega}{\omega^T\Sigma_0\omega+ \omega^T\Sigma_1\omega}
+J=\frac{||\omega^T\mu_0 - \omega^T\mu_1||_2^2}{\omega^T\mathbf \Sigma_0\omega+ \omega^T\mathbf \Sigma_1\omega}=\frac{\omega^T(\mu_0-\mu_1)(\mu_0-\mu_1)^T\omega}{\omega^T\mathbf \Sigma_0\omega+ \omega^T\mathbf \Sigma_1\omega}
 $$
 定义
 
@@ -488,13 +488,13 @@ $$
 $$
 \mathbf S_b\mathbf W=\lambda\mathbf S_w\mathbf W
 $$
-则$\mathbf W$ 的闭式解时$\mathbf S_w^{-1}\mathbf S_b$ 的N - 1 个最大广义特征值所对应的特征向量组成的矩阵。
+则$\mathbf W$ 的闭式解是$\mathbf S_w^{-1}\mathbf S_b$ 的N - 1 个最大广义特征值所对应的特征向量组成的矩阵。
 
 若将 $\mathbf W$ 视为一个投影矩阵，则多分类 LDA 将样本投影到 N-1 维空间， N-1 通常**远小于数据原有的属性数**。于是，可通过这个投影来**减小样本点的维数**，且投影过程中使用了类别信息，因此LDA也常被视为一种经典的监督降维技术。
 
 ## 多分类学习
 
-考虑 N 个类别 C~1~，C~2~，… ，C~N~ ， 多分类学习的**基本思路**是**拆解法**，即将多分类任务拆为若干个二分类任务求解。
+考虑 N 个类别 C~1~，C~2~，… ，C~N~，多分类学习的**基本思路**是**拆解法**，即将多分类任务拆为若干个二分类任务求解。
 
 **拆分策略**
 
@@ -516,11 +516,11 @@ $$
 
 *类别不平衡* (class-imbalance) 就是指分类任务中不同类别的训练样例数目差别很大的情况。
 
-利用几率函数来说明，几率y / (1-y) 反映了正例可能性与反例可能性之比，y 的阔值设置为0.5 恰表明分类器认为真实正、反例可能性相同。
+利用几率函数来说明，几率y / (1-y) 反映了正例可能性与反例可能性之比，逻辑回归中y 的阈值设置为0.5 恰表明分类器认为真实正、反例可能性相同。
 $$
 \frac{y}{1-y}>1\ \ 则为正例
 $$
-然而，当训练集中正、反例的数目不同时，令 m^+^表示正例数目， m^-^表示反例数目，则观测几率是m^+^ / m^-^，由于通常假设**训练集是真实样本总体的无偏采样**。观测几率就代表了真实几率。于是，只要分类器的**预测几率高于观测几率**就应判定为正例：
+然而，当训练集中正、反例的数目不同时，令 m^+^ 表示正例数目， m^-^ 表示反例数目，则观测几率是m^+^ / m^-^，由于通常假设**训练集是真实样本总体的无偏采样**。观测几率就代表了真实几率。于是，只要分类器的**预测几率高于观测几率**就应判定为正例：
 $$
 \frac{y}{1-y}>\frac{m^+}{m^-} \ \ 则为正例
 $$
