--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -401,7 +401,7 @@ $$
 
 对代价函数求偏导为：
 $$
-\nabla_{\theta_k}J(\Theta)=\frac{1}{m}\sum\limits_{i=1}^m(\hat p_k^{(i)}-y_k{(i)})\mathbf x^{(i)}
+\nabla_{\theta_k}J(\Theta)=\frac{1}{m}\sum\limits_{i=1}^m(\hat p_k^{(i)}-y_k{(i)})\mathbf{x}^{(i)}
 $$
 
 ## 线性判别分析
@@ -412,49 +412,49 @@ $$
 
 具体**描述**：
 
-给丁数据集$D=\{(\mathbf x_i,y_i\}^m_{i=1},\ y_i\in\{0,\ 1\}$ ，令$\mathbf X_i,\ \mu_i,\ \mathbf \Sigma_i$ 为第i 类示例的集合、均值向量和协方差矩阵。将数据投影到直线$\omega$ 上，则两类样本的**中心**在直线上的投影为$\omega^T\mu_0$ 和$\omega^T\mu_1$，协方差为$\omega^T\mathbf \Sigma_0\omega$ 和$\omega^T\mathbf \Sigma_1\omega$。(直线是一维空间，以上四个皆为实数。)
+给丁数据集$D=\{(\mathbf{x}_i,y_i\}^m_{i=1},\ y_i\in\{0,\ 1\}$ ，令$\mathbf{X}_ii,\ \mu_i,\ \mathbf{\Sigma}_i$ 为第i 类示例的集合、均值向量和协方差矩阵。将数据投影到直线$\omega$ 上，则两类样本的**中心**在直线上的投影为$\omega^T\mu_0$ 和$\omega^T\mu_1$，协方差为$\omega^T\mathbf{\Sigma}_0\omega$ 和$\omega^T\mathbf{\Sigma}_1\omega$。(直线是一维空间，以上四个皆为实数。)
 
-上面思想的**代数表示**为：$\omega^T\mathbf\Sigma_0\omega+ \omega^T\mathbf \Sigma_1\omega$  尽可能小 (同类接近) 和$||\omega^T\mu_0 - \omega^T\mu_1||$ 尽可能大 (异类相远)。即最大化目标：
+上面思想的**代数表示**为：$\omega^T\mathbf{\Sigma}_0\omega+ \omega^T\mathbf{\Sigma}_1\omega$  尽可能小 (同类接近) 和$||\omega^T\mu_0 - \omega^T\mu_1||$ 尽可能大 (异类相远)。即最大化目标：
 $$
-J=\frac{||\omega^T\mu_0 - \omega^T\mu_1||_2^2}{\omega^T\mathbf \Sigma_0\omega+ \omega^T\mathbf \Sigma_1\omega}=\frac{\omega^T(\mu_0-\mu_1)(\mu_0-\mu_1)^T\omega}{\omega^T\mathbf \Sigma_0\omega+ \omega^T\mathbf \Sigma_1\omega}
+J=\frac{||\omega^T\mu_0 - \omega^T\mu_1||_2^2}{\omega^T\mathbf{\Sigma}_0\omega+ \omega^T\mathbf{\Sigma}_1\omega}=\frac{\omega^T(\mu_0-\mu_1)(\mu_0-\mu_1)^T\omega}{\omega^T\mathbf{\Sigma}_0\omega+ \omega^T\mathbf{\Sigma}_1\omega}
 $$
 定义
 
 - *类内散度矩阵* (within-class scatter matrix)：
 
 $$
-\mathbf S_w=\mathbf\Sigma_0+\mathbf\Sigma_1=\sum_{\mathbf x\in\mathbf X_0}(\mathbf x-\mu_0)(\mathbf x-\mu_0)^T+\sum_{\mathbf x\in\mathbf X_1}(\mathbf x-\mu_1)(\mathbf x-\mu_1)^T
+\mathbf{S}_w=\mathbf{\Sigma}_0+\mathbf{\Sigma}_1=\sum_{\mathbf{x}\in\mathbf{X}_0}(\mathbf{x}-\mu_0)(\mathbf{x}-\mu_0)^T+\sum_{\mathbf{x}\in\mathbf{X}_1}(\mathbf{x}-\mu_1)(\mathbf{x}-\mu_1)^T
 $$
 
 - *类间散度矩阵* (between-class scatter matrix)：
 
 $$
-\mathbf S_b=(\mu_0-\mu_1)(\mu_0-\mu_1)^T
+\mathbf{S}_b=(\mu_0-\mu_1)(\mu_0-\mu_1)^T
 $$
 
 式(37) 写为：
 $$
-J=\frac{\omega^T\mathbf S_b\omega}{\omega^T\mathbf S_w\omega}
+J=\frac{\omega^T\mathbf{S}_b\omega}{\omega^T\mathbf{S}_w\omega}
 $$
 上式也称为**广义瑞利商** (generalized Rayleigh quotient)。
 
 ### 求解
 
-式(40) 分子分母都是关于$\omega$ 的二次项，所以**解与其长度无关，只与方向有关**。设$\omega^T\mathbf S_w\omega=1$，式(40) 等价于
+式(40) 分子分母都是关于$\omega$ 的二次项，所以**解与其长度无关，只与方向有关**。设$\omega^T\mathbf{S}_w\omega=1$，式(40) 等价于
 $$
-\min_\omega\ -\omega^T\mathbf S_b\omega\ \ s.t.\ \omega^T\mathbf S_w\omega=1
+\min_\omega\ -\omega^T\mathbf{S}_b\omega\ \ s.t.\ \omega^T\mathbf{S}_w\omega=1
 $$
 拉格朗日乘子法：
 $$
-\mathbf S_b\omega=\lambda\mathbf S_w\omega
+\mathbf{S}_b\omega=\lambda\mathbf{S}_w\omega
 $$
-**注意**到$\mathbf S_b\omega$ 的**方向**恒为$\mu_0-\mu_1$，可有
+**注意**到$\mathbf{S}_b\omega$ 的**方向**恒为$\mu_0-\mu_1$，可有
 $$
-\mathbf S_b\omega=\lambda(\mu_0-\mu_1)
+\mathbf{S}_b\omega=\lambda(\mu_0-\mu_1)
 $$
 代入式(42) 可得
 $$
-\omega=\mathbf S_w^{-1}(\mu_0-\mu_1)
+\omega=\mathbf{S}_w^{-1}(\mu_0-\mu_1)
 $$
 **考虑数值求逆的稳定性**，可用**奇异值分解**来求逆。可证明，当两类数据同先验、满足高斯分布且协方差相等时， LDA可达到最优分类。
 
@@ -467,30 +467,30 @@ $$
 - *类间全局散度矩阵* ($\mu$ 为**所有**示例的均值向量)：
 
 $$
-\mathbf S_t=\mathbf S_b+\mathbf S_w = \sum\limits_{i=1}^m(\mathbf x_i-\mu)(\mathbf x_i-\mu)^T
+\mathbf{S}_t=\mathbf{S}_b+\mathbf{S}_w = \sum\limits_{i=1}^m(\mathbf{x}_i-\mu)(\mathbf{x}_i-\mu)^T
 $$
 
 - *类内全局散度矩阵*：
 
 $$
-\mathbf S_w=\sum\limits_{i=1}^N\mathbf S_{w_i},\mathbf S_{w_i}=\sum\limits_{\mathbf x\in\mathbf X_i}(\mathbf x_i-\mu)(\mathbf x_i-\mu)^T
+\mathbf{S}_w=\sum\limits_{i=1}^N\mathbf{S}_{w_i},\mathbf{S}_{w_i}=\sum\limits_{\mathbf{x}\in\mathbf{X}_i}(\mathbf{x}_i-\mu)(\mathbf{x}_i-\mu)^T
 $$
 
 由上两式可得
 $$
-\mathbf S_b=\mathbf S_t - \mathbf S_w=\sum\limits_{i=1}^N m_i(\mu_i-\mu)(\mu_i-\mu)^T
+\mathbf{S}_b=\mathbf{S}_t - \mathbf{S}_w=\sum\limits_{i=1}^N m_i(\mu_i-\mu)(\mu_i-\mu)^T
 $$
-显然，多分类 LDA 有多种实现方法：使用$\mathbf S_b,\ \mathbf S_w,\ \mathbf S_t$ 三者中的任何两个即可。**常用**优化
+显然，多分类 LDA 有多种实现方法：使用$\mathbf{S}_b,\ \mathbf{S}_w,\ \mathbf{S}_t$ 三者中的任何两个即可。**常用**优化
 $$
-\max_\mathbf W\frac{tr(\mathbf W^T\mathbf S_b\mathbf W)}{tr(\mathbf W^T\mathbf S_w\mathbf W)}
+\max_\mathbf{W}\frac{tr(\mathbf{W}^T\mathbf{S}_b\mathbf{W})}{tr(\mathbf{W}^T\mathbf{S}_w\mathbf{W})}
 $$
-其中$\mathbf W \in R^{d\times(N-1)}$。可用广义特征值问题求解：
+其中$\mathbf{W} \in R^{d\times(N-1)}$。可用广义特征值问题求解：
 $$
-\mathbf S_b\mathbf W=\lambda\mathbf S_w\mathbf W
+\mathbf{S}_b\mathbf{W}=\lambda\mathbf{S}_w\mathbf{W}
 $$
-则$\mathbf W$ 的闭式解是$\mathbf S_w^{-1}\mathbf S_b$ 的N - 1 个最大广义特征值所对应的特征向量组成的矩阵。
+则$\mathbf{W}$ 的闭式解是$\mathbf{S}_w^{-1}\mathbf{S}_b$ 的N - 1 个最大广义特征值所对应的特征向量组成的矩阵。
 
-若将 $\mathbf W$ 视为一个投影矩阵，则多分类 LDA 将样本投影到 N-1 维空间， N-1 通常**远小于数据原有的属性数**。于是，可通过这个投影来**减小样本点的维数**，且投影过程中使用了类别信息，因此LDA也常被视为一种经典的监督降维技术。
+若将 $\mathbf{W}$ 视为一个投影矩阵，则多分类 LDA 将样本投影到 N-1 维空间， N-1 通常**远小于数据原有的属性数**。于是，可通过这个投影来**减小样本点的维数**，且投影过程中使用了类别信息，因此LDA也常被视为一种经典的监督降维技术。
 
 ## 多分类学习
 
