--- a/MachineLearning/3线性模型.md
+++ b/MachineLearning/3线性模型.md
@@ -62,20 +62,20 @@ $$
 
 梯度下降法的**思想**就是不断**迭代调整参数使得代价函数最终达到最小**。
 
-![屏幕快照 2018-01-15 11.34.10](../../../Downloads/屏幕快照 2018-01-15 11.34.10.png)
+![屏幕快照 2018-01-15 11.34.10](3/屏幕快照 2018-01-15 11.34.10.png)
 
 其中一个重要的参数就是**学习率**，它决定了迭代时的步长。*如果学习率太小，则可能收敛速度太慢；若学习率太大，则可能造成震荡*。
 
-![屏幕快照 2018-01-15 11.40.41](../../../Downloads/屏幕快照 2018-01-15 11.40.41.png)
+![屏幕快照 2018-01-15 11.40.41](3/屏幕快照 2018-01-15 11.40.41.png)
 
-![屏幕快照 2018-01-15 11.40.53](../../../Downloads/屏幕快照 2018-01-15 11.40.53.png)
+![屏幕快照 2018-01-15 11.40.53](3/屏幕快照 2018-01-15 11.40.53.png)
 
 对于梯度下降法，有两个主要的**问题**：
 
 - 收敛到局部最小值；
 - 可能在某一处平坦的“高原”上不断地迭代而无法到达全局最小值。
 
-![屏幕快照 2018-01-15 11.43.52](../../../Downloads/屏幕快照 2018-01-15 11.43.52.png)
+![屏幕快照 2018-01-15 11.43.52](3/屏幕快照 2018-01-15 11.43.52.png)
 
 对于线性回归来说，其代价函数（均方误差(MSE)）是
 
@@ -84,7 +84,7 @@ $$
 
 在使用梯度下降法还需要注意的一点是**all features should have a similar scale**。
 
-![屏幕快照 2018-01-15 11.54.20](../../../Downloads/屏幕快照 2018-01-15 11.54.20.png)
+![屏幕快照 2018-01-15 11.54.20](3/屏幕快照 2018-01-15 11.54.20.png)
 
 上图的左图中，feature 1 和 feature 2 具有相同的规模(scale)；而在右图中，feature 1 的规模比feature 2 小（因为在右图中，it takes a large change in $\theta_1$ to affect the cost function, which is why the bowl is elongated along the $\theta_1$ axis.
 
@@ -129,7 +129,7 @@ $$
 - **震荡**：每次迭代代价函数都有可能走高或走低，**decreasing only on average**. 
 - 当迭代停止时，有可能并不会停在最低点上而是在其附近。
 
-![屏幕快照 2018-01-16 20.34.30](../../../Downloads/屏幕快照 2018-01-16 20.34.30.png)
+![屏幕快照 2018-01-16 20.34.30](3/屏幕快照 2018-01-16 20.34.30.png)
 
 **优点**：当代价函数不规则时，随机梯度下降会帮它**跳出局部最小值**。
 
@@ -164,7 +164,7 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 
 **实现**：划分好测试集和训练集。用不同大小的训练集（1到全部）训练模型，然后画出模型在训练集和测试集上的表现。
 
-![屏幕快照 2018-01-20 16.18.53](../../../Downloads/屏幕快照 2018-01-20 16.18.53.png)
+![屏幕快照 2018-01-20 16.18.53](3/屏幕快照 2018-01-20 16.18.53.png)
 
 上图就是以RMSE为评判标准，不同大小的训练集训练出的模型在训练集和测试集上的表现。
 
@@ -174,13 +174,13 @@ Mini-batch gradient descent是前两者的结合：每次选取一个**小的随
 
 **注意**：**欠拟合不在于数据不够**，而在于所选模型的**学习能力**低下或者**所选特征**不好。
 
-![overfitting_learning_curves_plot](../../../Downloads/overfitting_learning_curves_plot.png)
+![overfitting_learning_curves_plot](3/overfitting_learning_curves_plot.png)
 
 而这幅图是个**过拟合模型**：训练集和测试集的RMSE 够低，但是**二者之间有巨大的差距**。说明模型在训练集上表现很好但在测试集上表现很差。
 
 下面这幅图就是选用了对的模型，**因为训练集和测试集的误差都足够小且差距不大**。
 
-![learning_curves_plot](../../../Downloads/learning_curves_plot.png)
+![learning_curves_plot](3/learning_curves_plot.png)
 
 ## 正则化线性回归
 
@@ -248,7 +248,7 @@ $$
 
 另一个避免过拟合的方法是**早停**：当**测试集**的错误率取得最小值时停止迭代。
 
-![屏幕快照 2018-01-20 17.53.48](../../../Downloads/屏幕快照 2018-01-20 17.53.48.png)
+![屏幕快照 2018-01-20 17.53.48](3/屏幕快照 2018-01-20 17.53.48.png)
 
 可以在训练时对比epoch完成后的validation error 和当前最小的validation error并记录对应的模型参数。当我们确定训练足够（继续下去不会再有减小）时就可跳出训练并以validation error 最小的模型作为最佳模型。
 
@@ -279,7 +279,7 @@ $$
 $$
 y =\frac{1}{1+e^{-z}}=\frac{1}{1+e^{-(\mathbf{\omega^T\mathbf{x}+b})}}
 $$
-![屏幕快照 2018-01-08 14.22.17](../../../Downloads/屏幕快照 2018-01-08 14.22.17.png)
+![屏幕快照 2018-01-08 14.22.17](3/屏幕快照 2018-01-08 14.22.17.png)
 
 将上式取对数：
 $$
@@ -365,9 +365,9 @@ $$
 
 对于*对数几率函数*，当z = 0 时其为0.5。这里就是它的**决策边界**。
 
-![屏幕快照 2018-01-22 14.52.44](../../../Downloads/屏幕快照 2018-01-22 14.52.44.png)
+![屏幕快照 2018-01-22 14.52.44](3/屏幕快照 2018-01-22 14.52.44.png)
 
-![屏幕快照 2018-01-22 14.53.11](../../../Downloads/屏幕快照 2018-01-22 14.53.11.png)
+![屏幕快照 2018-01-22 14.53.11](3/屏幕快照 2018-01-22 14.53.11.png)
 
 注意到正负样本肯能会**穿过边界**但模型**无法给出正确的预测**。
 
@@ -408,7 +408,7 @@ $$
 
 **思想**：给定训练样例集，设法将样例投影到一条直线上，使得**同类样例的投影点尽可能接近**、 异类样例的投影点尽可能远离；在对新样本进行分类时，将其投影到同样的这条直线上，再根据投影点的位置来确定新样本的类别。
 
-![屏幕快照 2018-01-22 15.35.17](../../../Downloads/屏幕快照 2018-01-22 15.35.17.png)
+![屏幕快照 2018-01-22 15.35.17](3/屏幕快照 2018-01-22 15.35.17.png)
 
 具体**描述**：
 
@@ -501,7 +501,7 @@ $$
 - 一对一（OvO）：将N 个类别**两两配对**，从而产生 N(N - 1) / 2 个二分类任务。测试时新样本提交给**所有**分类器，得到N(N - 1) / 2 个分类结果，最终结果通过投票产生：把被预测得最多的类别作为最终分类结果；
 - 一对多（OvR）：每次将一个类的样例作为正例、**所有其他类**的样例作为反例来训练 N 个分类器.
 
-![屏幕快照 2018-01-22 16.52.28](../../../Downloads/屏幕快照 2018-01-22 16.52.28.png)
+![屏幕快照 2018-01-22 16.52.28](3/屏幕快照 2018-01-22 16.52.28.png)
 
 - 多对多（MvM）：每次将若干个类作为正类，若干个其他类作为反类。OvO 和 OvR 是 MvM 的特例。MvM 的正、反类构造必须有**特殊的设计**。**常用技术**：*纠错输出码* (Error Correcting output Codes, ECOC)。**步骤**：
 
@@ -510,7 +510,7 @@ $$
 
   对同等长度的编码，理论上来说，任意两个类别之间的编码距离越远，则**纠错能力越**强。
 
-  ![屏幕快照 2018-01-22 16.56.52](../../../Downloads/屏幕快照 2018-01-22 16.56.52.png)
+  ![屏幕快照 2018-01-22 16.56.52](3/屏幕快照 2018-01-22 16.56.52.png)
 
 ## 类别不平衡
 
