--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -73,3 +73,26 @@ $$
 
 - 选取一对需更新的变量$\alpha_i$ 和$\alpha_j$；
 - 固定$\alpha_i$ 和$\alpha_j$ 意外以外的参数，求解式(9) 获得更新后的$\alpha_i$ 和$\alpha_j$。
+
+**注意到**只要选取的$\alpha_i$ 和$\alpha_j$ 中有一个**不满足**KKT 条件，目标函数就会在迭代后**减小**。*KKT条件的违背程度越大，变量更新后可能导致的目标函数值减幅越大*。所以，SMO 先选取违背KKT 条件程度最大的变量，第二个变量则选择一个使目标函数数值减小最快的变量。为此，SMO 使用了**启发式**策略：使选取的两变量所对应的样本之间的间隔最大。（**解释**：两个变量有很大的差别，与对两个相似的变量进行更新相比，对它们进行更新会带给目标函数值更大的变化。）
+
+仅考虑$\alpha_i$ 和$\alpha_j$ 时，式(9) 的约束 (s.t. 后的部分) 可以写为
+$$
+\alpha_iy_i + \alpha_j y_j=c,\ \alpha_i \ge 0, \alpha_j \ge 0
+$$
+其中，
+$$
+c=-\sum_{k\ne i,j}\alpha_ky_k
+$$
+是使$\sum_{i=1}^m\alpha_iy_i$ 成立的常数。
+
+用 $\alpha_iy_i+\alpha_jy_j=c$ 消去式(9) 中的变量$\alpha_j$，得到一个关于$\alpha_i$ 对单变量二次规划问题，仅有的约束时$\alpha_i\ge0$。
+
+最后需要求解偏移量b。对任意支持向量$(\mathbf{x}_s, y_s)$ 有
+$$
+y_i(\sum_{i\in S}\alpha_iy_i\mathbf{x}_i^T\mathbf{x}_s+b)=1
+$$
+其中S 为所有支持向量的下标集。可以选取**任意**支持向量求解上式来获得b。实际中常常使用**所有**支持向量然后**求取**平均值。
+$$
+b=\frac{1}{|S|}\sum_{s\in S}(y_s-\sum_{i\in S}\alpha_iy_i\mathbf{x}^T_i\mathbf{x}_s)
+$$
