--- a/MachineLearning/4支持向量机.md
+++ b/MachineLearning/4支持向量机.md
@@ -266,3 +266,24 @@ f(\mathbf{x}) & =\omega^T\phi(\mathbf{x})+b \\
 \end{align}
 $$
 这里$\kappa(\cdot,\cdot)$ 就是*核函数* (kernel function)。显然，如知道$\phi(\cdot)$ 的具体形式，就可以写出$\kappa(\cdot,\cdot)$.
+
+**定义**：令X 为输入空间，$\kappa(\cdot,\cdot)$ 是定义在X * X 上的**对称函数**，则其为核函数当且仅当对于任意数据D，**核矩阵** K 总是半正定的。
+$$
+\mathbf{K}=\begin{bmatrix}
+\kappa(\mathbf{x}_1, \mathbf{x}_1)  & \ldots & \kappa(\mathbf{x}_1, \mathbf{x}_m) \\
+\vdots & & \vdots \\
+\kappa(\mathbf{x}_m, \mathbf{x}_1) & ldots & \kappa(\mathbf{x}_m, \mathbf{x}_m)
+\end{bmatrix}
+$$
+该定义说明，只要一个对称函数所对应的核矩阵半正定，它就能作为核函数使用。而对于一个半正定核矩阵，总能找到一个与之对应的映射$\phi$。换言之，任何一个核函数都隐式定义了一个称为*再生核希尔伯特空间* (RKHS) 的特征空间。
+
+显然，**特征空间的好坏**对支持向量机的性能至关重要。在不知道特征映射的形式时，我们并不知道什么样的核函数是合适的，而核函数也仅是隐式地走义了这个特征空间。于是，**核函数的选择**成为支持向量机的最大变数。常用的核函数有：
+
+![屏幕快照 2018-01-27 15.31.49](../../../Downloads/屏幕快照 2018-01-27 15.31.49.png)
+
+此外，还可以通过**函数组合**得到新的核函数：
+
+- 若$\kappa_1$ 和$\kappa_2$ 为核函数，其线性组合$\gamma_1 \kappa_1+\gamma_2\kappa_2$ 也是核函数；
+- 若$\kappa_1$ 和$\kappa_2$ 为核函数，其直积$\kappa_1\bigotimes\kappa_2(\mathbf{z},\mathbf{x})=\kappa_1(\mathbf{z},\mathbf{x})\kappa_1(\mathbf{z},\mathbf{x})$ 也是核函数；
+- 若$\kappa_1$ 为核函数，对于任意函数g(x)，$\kappa(\mathbf{x},\mathbf{z})=g(\mathbf{x})\kappa_1(\mathbf{x},\mathbf{z})g(\mathbf{z})$ 也是核函数。
+
