--- a/SLAM/非线性优化.md
+++ b/SLAM/非线性优化.md
@@ -197,3 +197,72 @@ $$
 
 从算法步骤可以看出，求解增量方程是最重要的。原则上，它要求$\mathbf{J}^T\mathbf{J}$ 是可逆（并且是正定）的。但实际中，计算所得的$\mathbf{J}^T\mathbf{J}$ 常常是半正定的。因此，在高斯牛顿法中，可能出现$\mathbf{J}^T\mathbf{J}$ 是奇异阵或者病态的情况。此时求的$\Delta\mathbf{x}$ 不稳定，算法可能不收敛。就算**H** 满足要求，回想泰勒展开的一个隐含前提是：近视只在$\mathbf{x}_k$ 附近有效。如果我们求得的步长$\Delta\mathbf{x}$ 太大，也会使得近似不够准确。
 
+### 列文伯格 - 马夸尔特法
+
+泰勒展开只在展开点附近有较好的近似效果，而在高斯牛顿法并没有对这个“附近”有明确的定义。那么很自然地，我们就想给$\Delta \mathbf{x}$ 定义一个范围，限制它的大小。这个范围就叫做**信赖区域** (trust region)，这类方法就叫*信赖区域法*。在信赖区域内，我们认为近似是有效的；在信赖区域外则近似会出现问题。
+
+那问题就变成了*如何确定信赖区域*。一个比较直观也比较好的方法就是依据近似模型和实际函数之间的差异来确定：如果二者之间的差异较小，说明近似地还不错，那么信赖区域就可以大一些。如果二者间的差异大，就让信赖区域小一些。
+
+考虑使用
+$$
+\rho=\frac{f(\mathbf{x}+\Delta \mathbf{x})-f(\mathbf{x})}{\mathbf{J}(\mathbf{x})\Delta \mathbf{x}}
+$$
+来判断泰勒展开是否较好地近似了原模型。上式的分子是函数实际下降的数值，而分母是用来近似的泰勒展开下降的值。
+
+*如果$\rho$ 接近1，则近似是好的；如果$\rho$ 比较小，说明实际减小的数值远小于近似出来的值，说明近似得不好，需要缩小信赖区域；如果$\rho$ 比较大，说明实际下降的值大于近似值，可以放宽信赖区域。*
+
+因此，列文伯格 - 马夸尔特法的算法步骤如下：
+
+> 1. 给定初始值$\mathbf{x}_0$ 和初始优化半径$\mu$；
+>
+> 2. 对于第k 次迭代，求解：
+>    $$
+>    \min_{\Delta \mathbf{x}_k}\ \frac{1}{2}||f(\mathbf{x}_k)+\mathbf{J}(\mathbf{x_k})\Delta \mathbf{x}_k||^2,\ \ s.t.\ ||\mathbf{D}\Delta \mathbf{x}_k||^2\le\mu
+>    $$
+>
+> 3. 计算$\rho$；
+>
+> 4. 若$\rho >\frac{3}{4}$, 则$\mu=2\mu$; 若$\rho<\frac{1}{4}$, 则$\mu = 0.4\mu$;
+>
+> 5. 若$\rho$ 大于阈值，则近似可行，$\mathbf{x}_{k+1}=\mathbf{x}_k+\Delta \mathbf{x}_k$;
+>
+> 6. 判断算法是否收敛，若不收敛则返回第2 步；否则结束。
+
+这里近似范围的扩大和阈值都是经验值。在列文伯格的方法中，**D** 是单位矩阵，以三维空间为例，意味着将增量$\Delta \mathbf{x}$ 限制在一个圆球中，认为只有在这个球中的增量才是有效的；而马夸尔特将**D** 取成非负对角矩阵，实际中常用$\mathbf{J}^T\mathbf{J}$ 的对角元素的平方根，则是将增量限制在一个椭球之中。
+
+问题的关键就在于式(35) 的求解。这是一个带约束条件的平差问题。利用拉格朗日乘子法将之转化为无约束的问题：
+$$
+\min_{\Delta \mathbf{x}_k}\ \frac{1}{2}||f(\mathbf{x}_k)+\mathbf{J}(\mathbf{x_k})\Delta \mathbf{x}_k||^2 + \frac{\lambda}{2}||\mathbf{D}\Delta \mathbf{x}_k||^2
+$$
+其中$\lambda$ 是拉格朗日乘子。与之前的推导类似，展开后对$\Delta \mathbf{x}_k$ 求导即可得到关于它的线性方程。令导函数为0 可得
+$$
+(\mathbf{H}+\lambda\mathbf{D}^T\mathbf{D})\Delta \mathbf{x}_k=\mathbf{g}
+$$
+可以看到，与高斯牛顿法相比，多了一项正则化项$\lambda\mathbf{D}^T\mathbf{D}$，首先是在一定程度上避免了线性方程组的系数矩阵的非奇异和病态问题，提供更稳定、准确的增量$\Delta \mathbf{x}_k$. 
+
+以较为简单的列文伯格法为例，**D** 为单位矩阵。当参数$\lambda$ 较小的时候，此时矩阵**H** 占据主导地位，说明二次近似模型在该范围内是比较好的，此时列文伯格 - 马夸尔特法接近高斯牛顿法；如果$\lambda$ 比较大，则$\lambda\mathbf{I}$ 是主要的，说明二次近似不够好，列文伯格 - 马夸尔特法接近一阶梯度下降法。
+
+最后谈一下$\lambda$ 的确定。与之前高博在书中说的近似范围$\mu$ 的确定一样是一种启发式的方法。
+
+1. $\lambda_0=\tau\cdot \max(h_{ii}), \nu=2$ ; 其中，$\tau$ 由用户指定，一般为1；$h_{ii}$ 是矩阵**H** 的对角线元素；
+2. 计算$\rho$ ;
+3. 若$\rho$ 较大，$\lambda = \lambda \cdot \max(\frac{1}{3}, (1-(2\rho-1)^3)),\ \nu=2$ ;
+4. 若$\rho$ 较小，$\lambda=2\lambda,\ \nu=2\nu$ ;
+
+### 小结
+
+这节我们介绍了两个常用的非线性优化的算法。需要注意的是，非线性优化常常使用泰勒展开来进行线性近似。而泰勒展开除了要求近似只在展开点附近有效之外，还有一个隐含的前提（我一直认为理论的前提比结果更重要），那就是必须**提供初始值**（泰勒展开点）。而为了得到比较好的最终结果，用户必须提供一个**良好的初始值**。在视觉SLAM 中，常常用ICP、PnP 等算法计算出一个结果作为Bundle Adjustment 的初始值。
+
+还有一个问题就是增量方程的求解常常涉及矩阵求逆的运算。在视觉SLAM 中，状态向量的维度往往特别大，直接进行求逆运算的话基本是不可能的。实际中常常采用**矩阵分解**的方法来求解线性方程。
+
+## 图优化理论简介
+
+我们已经介绍了非线性最小二乘及其求解方法。非线性最小二乘是由许许多多的误差项的平方和组成的。但仅仅看这一组优化变量及其误差我们并不清楚它们的**关联**。譬如，优化变量$\mathbf{x}_j$ 会影响多少个误差项，某个误差项又联系着哪些优化变量呢？我们希望能够直观地看到优化问题**长什么样**。
+
+图优化就是把优化问题表现成**图** (Graph) 的一种方式。*图* 是一种数据结构，这里就不引入了。在图优化中，用**顶点** (vertex) 表示**优化变量**，用**边** (edge) 表示**误差项**。于是，对于任意一个上述形式的非线性最小二乘问题，都可以构建一个与之对应的图。
+
+我们用三角形表示相机，圆表示路标，它们共同构成了图优化的顶点；用实线表示相机的运动模型，用虚线表示观测模型，它们构成了图优化的边。则图就表示成：
+
+![1](../../../Downloads/1.png)
+
+有了直观的表示，我们就可以进行更多的操作了。比如，可以**去掉孤立的顶点**或者**先优化边数多（度数大）的顶点**。最基本的图优化是用图来表达一个非线性最小二乘的优化问题，而我们可以利用**图的性质**来做**更好的优化**。
